# scribe

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
include/scribe/: CMakeLists.txt  core.hpp  defaults.hpp  scribe.hpp  util.hpp
tests/: CMakeLists.txt  core.test.cpp  defaults.test.cpp  scribe.test.cpp  util.test.cpp
